Rules passes directly to DynamicCalculator